tests/baselines/reference/asiAbstract.errors.txt
asiAbstract.ts(1,1): error TS2304: Cannot find name 'abstract'.
asiAbstract.ts(3,3): error TS1244: Abstract methods can only appear within an abstract class.


==== asiAbstract.ts (2 errors) ====
    abstract
    ~~~~~~~~
!!! error TS2304: Cannot find name 'abstract'.
    class NonAbstractClass {
      abstract s();
      ~~~~~~~~
!!! error TS1244: Abstract methods can only appear within an abstract class.
    }
    
    class C2 {
        abstract
        nonAbstractFunction() {
        }
    }
    
    class C3 {
        abstract
    }
    